# cppxla

./: .gitignore  CMakeLists.txt  README.md  TODO.md  get_compile_options.ipynb  main.cpp  pjrt_c_api.h  program.stablehlo  requirements.txt
cmake/: PJRTSettings.cmake
docs/: build_system_refactor_plan.md
examples/: CMakeLists.txt
examples/mnist/: .gitignore  CMakeLists.txt  README.md  download_mnist.py  mnist_jax.py  mnist_main.cpp  mnist_reader.hpp  requirements.txt
examples/mnist2/: README.md  mnist_jax.py
examples/scalar_add_1/: CMakeLists.txt  README.md  main.cpp  myJax.py
examples/vector_add_1/: CMakeLists.txt  README.md  main.cpp  myJax.py
pjrt/: CMakeLists.txt  README.md  buffer.cpp  buffer.hpp  client.cpp  client.hpp  common.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  deviceView.cpp  deviceView.hpp  event.cpp  event.hpp  exception.cpp  exception.hpp  executable.cpp  executable.hpp  loadedExecutable.cpp  loadedExecutable.hpp
pjrt/cmake/: pjrt_cpp_config.cmake.in
pjrt/detail/: callbackUserData.hpp  types.hpp
tests/: CMakeLists.txt  test_buffer_shapes.cpp  test_initialization.cpp
